--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   "description": "a basic add-on",
   "author": "",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.1",
+  "icon": "data/icon-32.png",
+  "icon64": "data/icon-64.png"
 }
