Port so suitable for JPM

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gps-detect",
   "title": "GPSDetect",
-  "id": "jid1-6FS2YpTAB7qhfg",
+  "id": "gps-detect@allanwirth.com",
   "description": "Detects GPS EXIF information in loaded JPEGs automatically",
   "author": "Allan Wirth",
   "license": "MPL 2.0",
-  "version": "0.1",
+  "version": "0.1.1",
+  "main": "lib/main.js",
   "icon": "data/icon-32.png",
   "icon64": "data/icon-64.png"
 }
